Squashed after rollback: f1fbbc8c-7fd6-46b4-85b0-16e17ea18ab1

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,6 +33,9 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Update yt-dlp to latest version (YouTube frequently updates their API)
+RUN pip install -U yt-dlp
+
 # Install Playwright browsers
 ENV PLAYWRIGHT_BROWSERS_PATH=/pw-browsers
 RUN playwright install chromium
